# ah_faceswap

./: .gitignore  plugin_info.json  pyproject.toml  setup.py
src/ah_faceswap/: __init__.py  mod.py
