[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ah_faceswap"
version = "1.0.0"
description = "Face swapping functionality using facefusionlib"
requires-python = ">=3.8"
dependencies = [
    "facefusionlib",
    "nanoid"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
